# e2k_patches

./: README.md
veloren_#d789168c43/: 0001-e2k-patch.patch  Инструкция.txt
veloren_#e3b90c3b32/: 0001-add-patch-for-veloren-weekly-17-06-2026.patch  Инструкция.txt
zed_0_165_4/: e2k_backport.patch  Инструкция.txt
zed_0_165_4/e2k_zed_crates/libc/libc-test/semver/: linux.txt
zed_0_165_4/e2k_zed_crates/libc/src/unix/: mod.rs
zed_0_165_4/e2k_zed_crates/linux-raw-sys03/src/e2k/: io_uring.rs  net.rs  system.rs
zed_0_165_4/e2k_zed_crates/ring017/: Cargo.toml  build.rs
zed_0_165_4/e2k_zed_crates/rustls_23/rustls/src/crypto/: mod.rs
zed_0_165_4/e2k_zed_crates/target-lexicon/: Cargo.toml
zed_0_165_4/e2k_zed_crates/target-lexicon/src/: lib.rs  targets.rs
zed_0_180_4_with_extensions/: 0001-e2k-patch.patch  Инструкция.txt
zed_0_180_4_with_extensions/e2k_zed_crates/cc-rs/src/: lib.rs
zed_0_180_4_with_extensions/e2k_zed_crates/libc/libc-test/semver/: linux-e2k.txt
zed_0_180_4_with_extensions/e2k_zed_crates/libc/src/: macros.rs
zed_0_180_4_with_extensions/e2k_zed_crates/linux-raw-sys03/src/e2k/: netlink.rs
zed_0_180_4_with_extensions/e2k_zed_crates/rustls_23/: Cargo.toml
zed_0_180_4_with_extensions/e2k_zed_crates/rustls_23/rustls/: Cargo.toml
zed_0_180_4_with_extensions/e2k_zed_crates/target-lexicon/: build.rs
zed_0_200_4/: e2k_backport.patch  Инструкция.txt
zed_0_200_4/e2k_zed_crates/cc-rs/cc-test/src/: e2k.S
zed_0_200_4/e2k_zed_crates/libc/: Cargo.toml
zed_0_200_4/e2k_zed_crates/libc/libc-test/: build.rs
zed_0_200_4/e2k_zed_crates/libc/src/unix/linux_like/: mod.rs  (+1 more)
zed_0_200_4/e2k_zed_crates/linux-raw-sys03/: Cargo.toml
zed_0_200_4/e2k_zed_crates/linux-raw-sys03/src/: lib.rs
zed_0_200_4/e2k_zed_crates/linux-raw-sys03/src/e2k/: general.rs  if_ether.rs  ioctl.rs  prctl.rs  xdp.rs
(+5 files in other folders)
