[workspace]
members = [
  "examples",
  "rustls",
]

## Deliberately not included in `members`:
exclude = [
  # `cargo fuzz` integration (requires nightly)
  "fuzz",
]

default-members = [
  # ---
  "examples",
  "rustls",
]
resolver = "2"

[workspace.dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
base64 = "0.22"
bencher = "0.1.5"
brotli = { version = "7", default-features = false, features = ["std"] }
brotli-decompressor = "4.0.1" # 4.0.1 required for panic fix
clap = { version = "4.3.21", features = ["derive", "env"] }
env_logger = "0.11"
hashbrown = { version = "0.15", default-features = false, features = ["default-hasher", "inline-more"] }
hex = "0.4"
hickory-resolver = { version = "0.25", features = ["https-aws-lc-rs", "webpki-roots"] }
log = { version = "0.4.8" }
macro_rules_attribute = "0.2"
mio = { version = "1", features = ["net", "os-poll"] }
num-bigint = "0.4.4"
once_cell = { version = "1.16", default-features = false, features = ["alloc", "race"] }
pki-types = { package = "rustls-pki-types", version = "1.11", features = ["alloc"] }
rcgen = { version = "0.13", features = ["pem", "aws_lc_rs"], default-features = false }
ring = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
subtle = { version = "2.5.0", default-features = false }
time = { version = "0.3.6", default-features = false }
tokio = { version = "1.34", features = ["io-util", "macros", "net", "rt"] }
webpki = { package = "rustls-webpki", version = "0.103", features = ["alloc"], default-features = false }
webpki-roots = "0.26"
x509-parser = "0.17"
zeroize = "1.7"
zlib-rs = "0.5"

[profile.bench]
codegen-units = 1
lto = true
